{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 611,
  "lineage": "fafc73e3-9850-5f56-9039-57487b73892f",
  "resources": [
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ee815174e178b4",
            "domain": "vpc",
            "id": "eipalloc-014ee815174e178b4",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-43-204-246-171.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.204.246.171",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-06339c693da333e91",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06339c693da333e91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BastionSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f625726a22b7fdf1",
            "private_dns": "ip-172-34-1-237.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.1.237",
            "public_dns": "ec2-13-201-50-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.50.124",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b98998fc13392486",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-020fa6eaea3fc1589",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f7029b3e2a26ab96"
            ]
          },
          "dependencies": [
            "module.api_gateway.module.security_groups.aws_security_group.public_sg",
            "module.api_gateway.module.vpc.aws_subnet.public_subnet",
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-05a9b21acdb90ed1a",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a9b21acdb90ed1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03aeb9c76f43b5719",
            "private_dns": "ip-172-34-4-118.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05dc04089281a0da2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0850040e6c47c5f62",
            "tags": {
              "Name": "private_instance_1"
            },
            "tags_all": {
              "Name": "private_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a5acbae0a2e3caa"
            ]
          },
          "dependencies": [
            "module.api_gateway.module.security_groups.aws_security_group.private_sg",
            "module.api_gateway.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-00d0a881d22666eaf",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00d0a881d22666eaf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8abc0b2c14a0e18",
            "private_dns": "ip-172-34-4-240.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09e833f6be26719fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0850040e6c47c5f62",
            "tags": {
              "Name": "private_instance_2"
            },
            "tags_all": {
              "Name": "private_instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02a5acbae0a2e3caa"
            ]
          },
          "dependencies": [
            "module.api_gateway.module.security_groups.aws_security_group.private_sg",
            "module.api_gateway.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014ee815174e178b4",
            "association_id": "eipassoc-0891f7ef96e105475",
            "connectivity_type": "public",
            "id": "nat-0442f0de54c4335ee",
            "network_interface_id": "eni-041b99b257648c7ad",
            "private_ip": "172.34.1.62",
            "public_ip": "43.204.246.171",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-020fa6eaea3fc1589"
          },
          "dependencies": [
            "module.api_gateway.module.instances.aws_eip.nat_eip",
            "module.api_gateway.module.vpc.aws_subnet.public_subnet",
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:route-table/rtb-07f5b113838c3ca70",
            "id": "rtb-07f5b113838c3ca70",
            "owner_id": "107534347551",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0442f0de54c4335ee",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.module.instances.aws_eip.nat_eip",
            "module.api_gateway.module.instances.aws_nat_gateway.nat_gateway",
            "module.api_gateway.module.vpc.aws_subnet.public_subnet",
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.instances",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00a9d5a35afa91148",
            "route_table_id": "rtb-07f5b113838c3ca70",
            "subnet_id": "subnet-0850040e6c47c5f62"
          },
          "dependencies": [
            "module.api_gateway.module.instances.aws_eip.nat_eip",
            "module.api_gateway.module.instances.aws_nat_gateway.nat_gateway",
            "module.api_gateway.module.instances.aws_route_table.private_route_table",
            "module.api_gateway.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.vpc.aws_subnet.public_subnet",
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:loadbalancer/app/private-alb/573d02365998c3ec",
            "arn_suffix": "app/private-alb/573d02365998c3ec",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-alb-748674845.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:loadbalancer/app/private-alb/573d02365998c3ec",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-065a1f517aa2bec4c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028e0985a66eb83e4"
              },
              {
                "subnet_id": "subnet-034670b0957139243"
              },
              {
                "subnet_id": "subnet-0d2c8dfe967eb6858"
              }
            ],
            "subnets": [
              "subnet-028e0985a66eb83e4",
              "subnet-034670b0957139243",
              "subnet-0d2c8dfe967eb6858"
            ],
            "vpc_id": "vpc-0e39e62c37f0f8306",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:listener/app/private-alb/573d02365998c3ec/1a345e35e27db769",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:targetgroup/private-target-group/90e9d719511df39c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:listener/app/private-alb/573d02365998c3ec/1a345e35e27db769",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:loadbalancer/app/private-alb/573d02365998c3ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.module.load_balancer.aws_lb.private_alb",
            "module.api_gateway.module.load_balancer.aws_lb_target_group.private_target_group",
            "module.api_gateway.module.load_balancer.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:targetgroup/private-target-group/90e9d719511df39c",
            "arn_suffix": "targetgroup/private-target-group/90e9d719511df39c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:107534347551:targetgroup/private-target-group/90e9d719511df39c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-0717cb852157bcada",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0717cb852157bcada",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BastionSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-096c902a37cf154bf",
            "private_dns": "ip-172-34-1-202.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.1.202",
            "public_dns": "ec2-13-233-125-211.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.125.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05e122ab8d7540b7b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9051d1a2ddecac5",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00403727118a34f51"
            ]
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.security_groups.aws_security_group.public_sg",
            "module.api_gateway.module.load_balancer.module.vpc.aws_subnet.public_subnet",
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-0aa41a08643ebfad5",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa41a08643ebfad5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b425662b5a38a080",
            "private_dns": "ip-172-34-4-214.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c8caa26d5d35323a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2c8dfe967eb6858",
            "tags": {
              "Name": "private_instance_1"
            },
            "tags_all": {
              "Name": "private_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8570337a66eb202"
            ]
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.security_groups.aws_security_group.private_sg",
            "module.api_gateway.module.load_balancer.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-034806b20f2c4d600",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034806b20f2c4d600",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ef4fd19eb94f8665",
            "private_dns": "ip-172-34-4-165.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.165",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00278ed2577546a22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d2c8dfe967eb6858",
            "tags": {
              "Name": "private_instance_2"
            },
            "tags_all": {
              "Name": "private_instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e8570337a66eb202"
            ]
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.security_groups.aws_security_group.private_sg",
            "module.api_gateway.module.load_balancer.module.vpc.aws_subnet.private_subnet",
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-0e8570337a66eb202",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8570337a66eb202",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-00403727118a34f51",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00403727118a34f51",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zenskar_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:internet-gateway/igw-013934b9e8101539e",
            "id": "igw-013934b9e8101539e",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-igw"
            },
            "tags_all": {
              "Name": "zenskar-igw"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0d2c8dfe967eb6858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2c8dfe967eb6858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-1"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-028e0985a66eb83e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028e0985a66eb83e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-2"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-034670b0957139243",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034670b0957139243",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-3"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0f9051d1a2ddecac5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9051d1a2ddecac5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-1"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-03f074ca10a97a535",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f074ca10a97a535",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-2"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0e7dcad702457ecd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7dcad702457ecd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-3"
            },
            "vpc_id": "vpc-0e39e62c37f0f8306"
          },
          "dependencies": [
            "module.api_gateway.module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zenskar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:vpc/vpc-0e39e62c37f0f8306",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.34.0.0/16",
            "default_network_acl_id": "acl-062cab14b95ca0f7f",
            "default_route_table_id": "rtb-08e1f12583db1f1aa",
            "default_security_group_id": "sg-065a1f517aa2bec4c",
            "dhcp_options_id": "dopt-0b14c5fe946d33454",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e39e62c37f0f8306",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e1f12583db1f1aa",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-vpc"
            },
            "tags_all": {
              "Name": "zenskar-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.api_gateway.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-02a5acbae0a2e3caa",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02a5acbae0a2e3caa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-0f7029b3e2a26ab96",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7029b3e2a26ab96",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zenskar_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:internet-gateway/igw-050e9a7e505dd6d0f",
            "id": "igw-050e9a7e505dd6d0f",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-igw"
            },
            "tags_all": {
              "Name": "zenskar-igw"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0850040e6c47c5f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0850040e6c47c5f62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-1"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-08c1f5c3ec5425201",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c1f5c3ec5425201",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-2"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0667092658415b763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0667092658415b763",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-3"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-020fa6eaea3fc1589",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020fa6eaea3fc1589",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-1"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0847ac59506a54a5e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0847ac59506a54a5e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-2"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0cf92bab0b989f834",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf92bab0b989f834",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-3"
            },
            "vpc_id": "vpc-0ae3f36ee7d94056a"
          },
          "dependencies": [
            "module.api_gateway.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zenskar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:vpc/vpc-0ae3f36ee7d94056a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.34.0.0/16",
            "default_network_acl_id": "acl-077c1b001a5b201ca",
            "default_route_table_id": "rtb-0347fe91aeada8bc9",
            "default_security_group_id": "sg-05cebaa800975f3f3",
            "dhcp_options_id": "dopt-0b14c5fe946d33454",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ae3f36ee7d94056a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0347fe91aeada8bc9",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-vpc"
            },
            "tags_all": {
              "Name": "zenskar-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-0268d05afcfe7ce85",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0268d05afcfe7ce85",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BastionSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f842f50420ba605e",
            "private_dns": "ip-172-34-1-138.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.1.138",
            "public_dns": "ec2-13-201-135-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.135.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06069a7b4975da0a5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0eaa4757782af0f62",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03c9bf8e746a70827"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-0271f43b32936379f",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0271f43b32936379f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d7f3445a38705af9",
            "private_dns": "ip-172-34-4-58.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.58",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03326d207ddfebe82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a28379a54070b67",
            "tags": {
              "Name": "private_instance_1"
            },
            "tags_all": {
              "Name": "private_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004496a7844d38e88"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-0ee2e28c40cfbc4f1",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee2e28c40cfbc4f1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c97f554c049cd336",
            "private_dns": "ip-172-34-4-192.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cbc4346b691d1b55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00a28379a54070b67",
            "tags": {
              "Name": "private_instance_2"
            },
            "tags_all": {
              "Name": "private_instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004496a7844d38e88"
            ]
          },
          "dependencies": [
            "module.security_groups.aws_security_group.private_sg",
            "module.vpc.aws_subnet.private_subnet",
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-03f65c05f3f7f6647",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f65c05f3f7f6647",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "BastionSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa6c43936595650f",
            "private_dns": "ip-172-34-1-28.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.1.28",
            "public_dns": "ec2-13-201-115-106.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.115.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0abb1d2cb0911c8e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038f58d527ea8138d",
            "tags": {
              "Name": "bastion-host"
            },
            "tags_all": {
              "Name": "bastion-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c959109527a15849"
            ]
          },
          "dependencies": [
            "module.load_balancer.module.security_groups.aws_security_group.public_sg",
            "module.load_balancer.module.vpc.aws_subnet.public_subnet",
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-021eff827e501949e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021eff827e501949e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030a32265c75dd032",
            "private_dns": "ip-172-34-4-70.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00203d6b0f8b8c07e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb8cb4552e3eb675",
            "tags": {
              "Name": "private_instance_1"
            },
            "tags_all": {
              "Name": "private_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a33a3e84f689b716"
            ]
          },
          "dependencies": [
            "module.load_balancer.module.security_groups.aws_security_group.private_sg",
            "module.load_balancer.module.vpc.aws_subnet.private_subnet",
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f4878755434977f",
            "arn": "arn:aws:ec2:ap-south-1:107534347551:instance/i-0ccc799a2ff777264",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ccc799a2ff777264",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "PrivateInstanceSSHKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06bc8c4b5e850c2e9",
            "private_dns": "ip-172-34-4-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.34.4.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a0c2062f2ea81ecc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cb8cb4552e3eb675",
            "tags": {
              "Name": "private_instance_2"
            },
            "tags_all": {
              "Name": "private_instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a33a3e84f689b716"
            ]
          },
          "dependencies": [
            "module.load_balancer.module.security_groups.aws_security_group.private_sg",
            "module.load_balancer.module.vpc.aws_subnet.private_subnet",
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-0a33a3e84f689b716",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a33a3e84f689b716",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-0c959109527a15849",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c959109527a15849",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f0cdb42a98529c8c",
            "domain": "vpc",
            "id": "eipalloc-0f0cdb42a98529c8c",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-7-121-169.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.121.169",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zenskar-nat-eip-3"
            },
            "tags_all": {
              "Name": "zenskar-nat-eip-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zenskar_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:internet-gateway/igw-0a8015d69f03205ef",
            "id": "igw-0a8015d69f03205ef",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-igw"
            },
            "tags_all": {
              "Name": "zenskar-igw"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0cb8cb4552e3eb675",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb8cb4552e3eb675",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-1"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0e5ce632bd45b4332",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5ce632bd45b4332",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-2"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0183f0a804389195c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0183f0a804389195c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-3"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-038f58d527ea8138d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f58d527ea8138d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-1"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0e7839c08100c4b2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7839c08100c4b2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-2"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0f989d9cdaacf9f3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f989d9cdaacf9f3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-3"
            },
            "vpc_id": "vpc-0c02f2c3792039776"
          },
          "dependencies": [
            "module.load_balancer.module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zenskar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:vpc/vpc-0c02f2c3792039776",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.34.0.0/16",
            "default_network_acl_id": "acl-0611eeccde7e54ee8",
            "default_route_table_id": "rtb-0ed445c4bdf61c30a",
            "default_security_group_id": "sg-0eed895cf50efcc09",
            "dhcp_options_id": "dopt-0b14c5fe946d33454",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c02f2c3792039776",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed445c4bdf61c30a",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-vpc"
            },
            "tags_all": {
              "Name": "zenskar-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-004496a7844d38e88",
            "description": "Security group for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004496a7844d38e88",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:security-group/sg-03c9bf8e746a70827",
            "description": "Security group for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c9bf8e746a70827",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_sg",
            "name_prefix": "",
            "owner_id": "107534347551",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff0e240be20a60d9",
            "domain": "vpc",
            "id": "eipalloc-0ff0e240be20a60d9",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-15-207-239-244.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.239.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zenskar-nat-eip-1"
            },
            "tags_all": {
              "Name": "zenskar-nat-eip-1"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fe4c0da7219d7ca",
            "domain": "vpc",
            "id": "eipalloc-03fe4c0da7219d7ca",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-211-162.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.211.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zenskar-nat-eip-2"
            },
            "tags_all": {
              "Name": "zenskar-nat-eip-2"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055b4283f27d3d84f",
            "domain": "vpc",
            "id": "eipalloc-055b4283f27d3d84f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-6-253-202.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.253.202",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "zenskar-nat-eip-3"
            },
            "tags_all": {
              "Name": "zenskar-nat-eip-3"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zenskar_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:internet-gateway/igw-08e85656454ac4c56",
            "id": "igw-08e85656454ac4c56",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-igw"
            },
            "tags_all": {
              "Name": "zenskar-igw"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff0e240be20a60d9",
            "association_id": "eipassoc-0156f41903ae2713b",
            "connectivity_type": "public",
            "id": "nat-080eef31e4a0a31dd",
            "network_interface_id": "eni-056e5b17f0a957fd0",
            "private_ip": "172.34.1.62",
            "public_ip": "15.207.239.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eaa4757782af0f62",
            "tags": {
              "Name": "zenskar-nat-gateway-1"
            },
            "tags_all": {
              "Name": "zenskar-nat-gateway-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fe4c0da7219d7ca",
            "association_id": "eipassoc-0b046a5270b73a945",
            "connectivity_type": "public",
            "id": "nat-03324882add192630",
            "network_interface_id": "eni-01f0e275683c2c52e",
            "private_ip": "172.34.2.121",
            "public_ip": "3.6.211.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002b6ad18efbe3e8b",
            "tags": {
              "Name": "zenskar-nat-gateway-2"
            },
            "tags_all": {
              "Name": "zenskar-nat-gateway-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-055b4283f27d3d84f",
            "association_id": "eipassoc-06034aad367ba307f",
            "connectivity_type": "public",
            "id": "nat-00f2126088c705e0f",
            "network_interface_id": "eni-09349baef61d7e08d",
            "private_ip": "172.34.3.160",
            "public_ip": "3.6.253.202",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08c66dc3494e46380",
            "tags": {
              "Name": "zenskar-nat-gateway-3"
            },
            "tags_all": {
              "Name": "zenskar-nat-gateway-3"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-00a28379a54070b67",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a28379a54070b67",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-1"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-075412e6463eaf940",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075412e6463eaf940",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-2"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0f24d0611186df9b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f24d0611186df9b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-private-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-private-subnet-3"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-0eaa4757782af0f62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.34.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eaa4757782af0f62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-1"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-1"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-002b6ad18efbe3e8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.34.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b6ad18efbe3e8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-2"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-2"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:subnet/subnet-08c66dc3494e46380",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "172.34.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c66dc3494e46380",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "107534347551",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zenskar-public-subnet-3"
            },
            "tags_all": {
              "Name": "zenskar-public-subnet-3"
            },
            "vpc_id": "vpc-072bbac1398ceb65a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.zenskar"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zenskar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:107534347551:vpc/vpc-072bbac1398ceb65a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.34.0.0/16",
            "default_network_acl_id": "acl-04f165bfc761a472f",
            "default_route_table_id": "rtb-084f03584b931b761",
            "default_security_group_id": "sg-004f60aba0cd266d5",
            "dhcp_options_id": "dopt-0b14c5fe946d33454",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-072bbac1398ceb65a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-084f03584b931b761",
            "owner_id": "107534347551",
            "tags": {
              "Name": "zenskar-vpc"
            },
            "tags_all": {
              "Name": "zenskar-vpc"
            }
          }
        }
      ]
    }
  ]
}